--- a/Softwave-Server Side.csproj
+++ b/Softwave-Server Side.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="Logic\DatabaseFactory.cs" />
     <Compile Include="Logic\MessageDetailsLogic.cs" />
+    <Compile Include="Logic\RegexStrings.cs" />
     <Compile Include="Models\ControllerConfigs.cs" />
     <Compile Include="Models\IDatabse.cs" />
     <Compile Include="Models\MessageDetails.cs" />
